--- a/person-1.html
+++ b/person-1.html
@@ -19,31 +19,31 @@
             </div>
             <ul class="person-info__social">
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="mailto:vlad.maltsev@whitebit.com" target="_blank">
                         <img src="assets/img/icon-mail.svg" alt="link-mail">
                         E-mail
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="https://telegram.me/vlad_whiteBIT" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="https://www.linkedin.com/in/vlad-malcev/" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="https://api.whatsapp.com/send/?phone=%2B380956866219&text&type=phone_number&app_absent=0" target="_blank">
                         <img src="assets/img/icon-whatsapp.svg" alt="link-whatsapp">
                         WhatsApp
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="https://calendly.com/vlad-maltsev/vlad-malcev-30min" target="_blank">
                         <img src="assets/img/icon-calendly.png" alt="link-calendly">
                         Calendly
                     </a>
