--- a/person-3.html
+++ b/person-3.html
@@ -19,31 +19,31 @@
             </div>
             <ul class="person-info__social">
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="#" target="_blank">
                         <img src="assets/img/icon-mail.svg" alt="link-mail">
                         E-mail
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="#" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="#" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="#" target="_blank">
                         <img src="assets/img/icon-whatsapp.svg" alt="link-whatsapp">
                         WhatsApp
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" class="hover">
+                    <a href="#" target="_blank">
                         <img src="assets/img/icon-calendly.png" alt="link-calendly">
                         Calendly
                     </a>
