--- a/person-2.html
+++ b/person-2.html
@@ -25,13 +25,13 @@
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="https://t.me/Vladyslav_WhiteBIT" target="_blank">
+                    <a href="https://t.me/artemwhitebit" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="https://www.linkedin.com/in/vlad-bogdan11/" target="_blank">
+                    <a href="https://www.linkedin.com/in/artemrozov" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
                     </a>
