--- a/person-10.html
+++ b/person-10.html
@@ -4,46 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vladyslav Maltsev</title>
+    <title>David Tunian</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="person-page">
     <main class="person">
         <div class="person-photo">
-           <img src="assets/img/person-1.png" alt="person">
+           <img src="assets/img/person-10.png" alt="person">
         </div>
         <div class="person-info">
-            <h1 class="person-info__name">Vladyslav Maltsev</h1>
+            <h1 class="person-info__name">David Tunian</h1>
             <div class="person-info__position">
-                 Head of B2B Sales & Business Development 
+                Head of Business Development
             </div>
             <ul class="person-info__social">
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="mailto:david.tunian@whitebit.com " target="_blank">
                         <img src="assets/img/icon-mail.svg" alt="link-mail">
                         E-mail
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://t.me/David_WhiteBIT" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/tunian/" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
-                        <img src="assets/img/icon-whatsapp.svg" alt="link-whatsapp">
-                        WhatsApp
-                    </a>
-                </li>
-                <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://calendly.com/tunian/30min" target="_blank">
                         <img src="assets/img/icon-calendly.png" alt="link-calendly">
                         Calendly
                     </a>
