--- a/person-11.html
+++ b/person-11.html
@@ -4,46 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vladyslav Maltsev</title>
+    <title>Mykhailo Movchana</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="person-page">
     <main class="person">
         <div class="person-photo">
-           <img src="assets/img/person-1.png" alt="person">
+           <img src="assets/img/person-11.png" alt="person">
         </div>
         <div class="person-info">
-            <h1 class="person-info__name">Vladyslav Maltsev</h1>
+            <h1 class="person-info__name">Mykhailo Movchana</h1>
             <div class="person-info__position">
-                 Head of B2B Sales & Business Development 
+                Head of UK Representation Department
             </div>
             <ul class="person-info__social">
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="mailto:mykhailo.movchan@whitebit.com" target="_blank">
                         <img src="assets/img/icon-mail.svg" alt="link-mail">
                         E-mail
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://t.me/Mykhailo_WhiteBIT_b2b" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/mihailmovchan/" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://api.whatsapp.com/message/TKYJ2NZPFNWFA1?autoload=1&app_absent=0" target="_blank">
                         <img src="assets/img/icon-whatsapp.svg" alt="link-whatsapp">
                         WhatsApp
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://calendly.com/mykhailo-movchan" target="_blank">
                         <img src="assets/img/icon-calendly.png" alt="link-calendly">
                         Calendly
                     </a>
