--- a/person-4.html
+++ b/person-4.html
@@ -4,48 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vladyslav Maltsev</title>
+    <title>Yurii Kulieshov</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="person-page">
     <main class="person">
         <div class="person-photo">
-           <img src="assets/img/person-1.png" alt="person">
+           <img src="assets/img/person-4.png" alt="person">
         </div>
         <div class="person-info">
-            <h1 class="person-info__name">Vladyslav Maltsev</h1>
+            <h1 class="person-info__name">Yurii Kulieshov</h1>
             <div class="person-info__position">
-                 Head of B2B Sales & Business Development 
+                CEO WhiteBIT Investment
             </div>
             <ul class="person-info__social">
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="mailto:yuriy.kuleshov@whitebit.com" target="_blank">
                         <img src="assets/img/icon-mail.svg" alt="link-mail">
                         E-mail
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://t.me/yuriy_kuleshov" target="_blank">
                         <img src="assets/img/icon-telegram.svg" alt="link-telegram">
                         Telegram
                     </a>
                 </li>
                 <li class="person-info__social-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/yuriy-kuleshov-79119b1a7" target="_blank">
                         <img src="assets/img/icon-linkedin.svg" alt="link-linkedin">
                         Linkedin
-                    </a>
-                </li>
-                <li class="person-info__social-item">
-                    <a href="#" target="_blank">
-                        <img src="assets/img/icon-whatsapp.svg" alt="link-whatsapp">
-                        WhatsApp
-                    </a>
-                </li>
-                <li class="person-info__social-item">
-                    <a href="#" target="_blank">
-                        <img src="assets/img/icon-calendly.png" alt="link-calendly">
-                        Calendly
                     </a>
                 </li>
             </ul>
