--- a/person-11.html
+++ b/person-11.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mykhailo Movchana</title>
+    <title>Mykhailo Movchan</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="person-page">
@@ -13,7 +13,7 @@
            <img src="assets/img/person-11.png" alt="person">
         </div>
         <div class="person-info">
-            <h1 class="person-info__name">Mykhailo Movchana</h1>
+            <h1 class="person-info__name">Mykhailo Movchan</h1>
             <div class="person-info__position">
                 Head of UK Representation Department
             </div>
