add script for width and increased font-size social list items

--- a/person-1.html
+++ b/person-1.html
@@ -13,7 +13,7 @@
            <img src="assets/img/person-1.png" alt="person">
         </div>
         <div class="person-info">
-            <h1 class="person-info__name">Vladyslav Maltsev</h1>
+            <h1 class="person-info__name">Vlad Maltsev</h1>
             <div class="person-info__position">
                  Head of B2B Sales & Business Development 
             </div>
@@ -56,6 +56,6 @@
     </main>
 
   
-
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
